[package]
name = "ghostd-parser"
version = "1.0.0"
edition = "2021"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = { version = "2.0.4", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
